--- a/assets/k8s_tcp/create.html
+++ b/assets/k8s_tcp/create.html
@@ -31,7 +31,7 @@
 				This is the port that the container image listens on.
 			</small>
 		</label>
-		<input type="text" class="form-control" name="repository" placeholder="Enter Port, i.e. 80 " required>
+		<input type="text" class="form-control" name="port" placeholder="Enter Port, i.e. 80 " required>
 </div>
 {% endblock %}
 
