Achieved spawning functioning containers for all three challenge types

--- a/assets/k8s_tcp/create.html
+++ b/assets/k8s_tcp/create.html
@@ -36,5 +36,5 @@
 {% endblock %}
 
 {% block type %}
-<input type="hidden" value="k8s-tcp" name="type" id="chaltype">
+<input type="hidden" value="k8s-random-port" name="type" id="chaltype">
 {% endblock %}
