--- a/assets/k8s_web/view.html
+++ b/assets/k8s_web/view.html
@@ -1,32 +1,34 @@
 {% extends "challenge.html" %}
 {% block description %}
 <div class='mb-3 text-center' id='k8s_container'>
-    <div id="k8s_connection"></div>
-    <div id="k8s_countdown"></div>
-    <div id="k8s_stop" style="display:none">
+    <div id="k8s_connection" style="display:none; padding: 10px">
+        <a class="btn btn-md btn-primary" id="k8s_connection_link" href="" target="_blank"><i class="fas fa-external-link-alt"></i> Launch Instance</a>
+    </div>
+    <div id="k8s_countdown"><br></div>
+    <div id="k8s_stop" style="display:none; padding: 10px">
     <form action="/api/v1/k8s/delete" method="post">
     <input id="challenge-id" class="challenge-id" name="challenge_id" type="hidden" value="{{ challenge.id }}">
     <input type="hidden" name="nonce" value="{{ session.get('nonce') }}"/>
     <span>
-        <button id="instance-delete-submit" class="btn btn-md btn-primary" type="submit" value="Submit">Stop Challenge Instance</button>
+        <button id="instance-delete-submit" class="btn btn-md btn-primary" type="submit" value="Submit"><i class="fas fa-stop-circle"></i></i> Stop Instance</button>
     </span>
     </form>
     </div>
-    <div id="k8s_extend" style="display:none">
+    <div id="k8s_extend" style="display:none; padding: 10px">
     <form action="/api/v1/k8s/extend" method="post">
     <input id="challenge-id" class="challenge-id" name="challenge_id" type="hidden" value="{{ challenge.id }}">
     <input type="hidden" name="nonce" value="{{ session.get('nonce') }}"/>
     <span>
-        <button id="instance-extend-submit" class="btn btn-md btn-primary" type="submit" value="Submit">Extend Time</button>
+        <button id="instance-extend-submit" class="btn btn-md btn-primary" type="submit" value="Submit"><i class="fas fa-stopwatch"></i> Extend Time</button>
     </span>
     </form>
     </div>
-    <div id="k8s_start" style="display:none">
+    <div id="k8s_start" style="display:none; padding: 10px">
     <form action="/api/v1/k8s/create" method="post">
     <input id="challenge-id" class="challenge-id" name="challenge_id" type="hidden" value="{{ challenge.id }}">
     <input type="hidden" name="nonce" value="{{ session.get('nonce') }}"/>
     <span>
-        <button id="instance-create-submit" class="btn btn-md btn-primary" type="submit" value="Submit">Start Challenge Instance</button>
+        <button id="instance-create-submit" class="btn btn-md btn-primary" type="submit" value="Submit"><i class="fas fa-play-circle"></i> Start Instance</button>
     </span>
     </form>
     </div>
