Reworked plugin to utilize config.yaml

--- a/assets/k8s_config.html
+++ b/assets/k8s_config.html
@@ -3,6 +3,10 @@
 <div class="jumbotron">
     <div class="container">
         <h1>Kubernetes Config</h1>
+        <small>Reminder: Make sure to update config.yaml if being used for the changes to persist.
+            <br>
+            If Kubernetes resources have not been applied, please restart CTFd for it to deploy these resources.
+        </small>
     </div>
 </div>
 <div class="container">
