--- a/assets/k8s_web/update.html
+++ b/assets/k8s_web/update.html
@@ -18,12 +18,21 @@
 		</small>
 	</label>
 	<input type="text" class="form-control" name="repository" placeholder="Enter Repository, i.e. github.com/user/repo "  value="{{ challenge.repository }}">
-	<div class="form-group">
-		<label for="port">Port:<br>
-			<small class="form-text text-muted">
-				This is the port that the container image listens on.
-			</small>
-		</label>
-		<input type="text" class="form-control" name="port" placeholder="Enter Port, i.e. 80 "  value="{{ challenge.port }}">
+</div>
+<div class="form-group">
+	<label for="port">Port:<br>
+		<small class="form-text text-muted">
+			This is the port that the container image listens on.
+		</small>
+	</label>
+	<input type="text" class="form-control" name="port" placeholder="Enter Port, i.e. 80 "  value="{{ challenge.port }}">
+</div>
+<div class="form-group">
+	<label for="force-rebuild">Force Rebuild<br>
+		<small class="form-text text-muted">
+			Force a rebuild of the challenge container image.
+		</small>
+	</label>
+	<input type="checkbox" class="form-check-input" name="force-rebuild" value="1">
 </div>
 {% endblock %}
